<resources>
    <string name="app_name">SecurityOilApp</string>
    <string name="mainMenu">Menú Principal</string>
    <string name="signOff">Cerrar Sesión</string>
    <string name="txt_reports">Reporte de Novedades</string>
    <string name="txt_work_accident">Accidente Laboral</string>
    <string name="txt_insecure_act">Acto Inseguro</string>
    <string name="txt_epp">EPP</string>
    <string name="txt_tools">Herramientas</string>
    <string name="txt_machine">Maquinaria</string>
    <string name="txt_enviroment">Ambiental</string>
    <string name="btn_save">Guardar</string>
    <string name="txt_elearning">E-Learning</string>
    <string name="txt_normativity">Normatividad</string>
    <string name="txt_care_tips">Consejos de Cuidado</string>
    <string name="txt_consider">Para Tener en Cuenta</string>
    <string name="txt_rule100">Ley 100 de 1993</string>
    <string name="txt_rule1072">Decreto 1072 de 2015</string>
    <string name="txt_rule614">Decreto 614 de 1984</string>
    <string name="txt_rule1281">Decreto 1281 de 1994</string>
    <string name="txt_rule1295">Decreto 1295 de 1994</string>
    <string name="txt_rule2400">Resolución 2400 de 1979</string>
    <string name="txt_rule1016">Resolución 1016 de 1989</string>
    <string name="txt_hands">Cuida Tus Manos</string>
    <string name="txt_focus">Concentrate en el Trabajo</string>
    <string name="txt_machinery">Maquinaria</string>
    <string name="txt_query">Consulta</string>
    <string name="txt_cleaning">Limpieza y Orden</string>
    <string name="txt_warn">Avisa</string>
    <string name="txt_popuphands">Cuida tus manos, cuando las máquinas y herramientas estén en movimiento</string>
    <string name="txt_popupfocus">Concéntrate en tu trabajo y evita distraer a tus compañeros</string>
    <string name="txt_popupmachinery">No operes un equipo que no conozcas</string>
    <string name="txt_popupquery">Si tienes alguna duda en cualquier actividad de tu trabajo, consulta a tu jefe inmediato</string>
    <string name="txt_popupcleaning">Mantén tu área de trabajo limpia y ordenada</string>
    <string name="txt_popupwarn">Si un equipo esta funcionando mal, avisa a tu jefe inmediato</string>
    <string name="txt_covid">COVID-19</string>
    <string name="txt_information">Información de Interes</string>
    <string name="txt_news">Noticias</string>
    <string name="txt_care">Cuidados</string>
    <string name="txt_care1">Lavarse las manos con jabon regularmente</string>
    <string name="txt_care2">Estornudar en el pliegue del codo</string>
    <string name="txt_care3">No llevarse las manos a los ojos, nariz ni boca</string>
    <string name="txt_care4">Ventilar los ambientes</string>
    <string name="txt_care5">Limpiar los objetos que usan con frecuencia</string>
    <string name="txt_care6">No compartir platos, vasos u otros artículos de uso personal</string>
    <string name="txt_symptom">Sintoma</string>
    <string name="txt_symptom1">Fiebre</string>
    <string name="txt_symptom2">Dolor de garganta</string>
    <string name="txt_symptom3">Dificultad para respirar</string>
    <string name="txt_symptom4">Tos seca</string>
    <string name="txt_symptom5">Dolor de cebeza</string>
    <string name="txt_symptom6">Diarrea</string>
    <string name="txt_symptom7">Perdida del ilfato o del gusto</string>
    <string name="txt_Oil">Sector Petrolero</string>
    <string name="txt_Oil1">La Agencia Internacional de Energía espera que Colombia produzca 750 mil barriles de crudo durante el presente año</string>
    <string name="txt_Oil2">La producción de petróleo en el año 2020 para Colombia muestra una caída del 11,8% en comparación con el 2019</string>
    <string name="txt_security">Seguridad Industrial</string>
    <string name="txt_security1">El promedio de trabajadores accidentados diariamente en Colombia es de 1.700 </string>
    <string name="txt_security2">El promedio de trabajadores con enfermedad laboral declara diariamente en Colombia es de 24</string>
    <string name="txt_security3">El promedio de muertes de trabajadores por accidentes laborales diario en Colombia es de 1,3</string>
    <string name="txt_news1">Colombia será de los primeros 18 países en recibir vacunas a través de Covax</string>
    <string name="txt_news2">Bloqueos en Bogotá por cuarentena</string>
    <string name="txt_news3">Desmienten masacre en Tibú</string>
    <string name="txt_news4">Condenan a 19 años al exdirector del DNE (Dirección Nacional de Estupefacientes)</string>
    <string name="txt_news5">Colombia llego a 53659 fallecidos por COVID</string>
    <string name="title_activity_inicio_sesion">inicio_sesion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_inicio__sesion">Inicio_Sesion</string>
    <string name="title_activity_registro__de__usuarios">Registro_De_Usuarios</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>