<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background1"
    tools:context=".covid">

    <TextView
        android:id="@+id/textViewT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_covid"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


            <TextView
                android:id="@+id/careText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="60sp"
                android:text="@string/txt_care"
                android:background="@drawable/white_rectangle_background"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/care1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="30sp"
                android:text="@string/txt_care1"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/care2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_care2"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/care3Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_care3"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/care4Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_care4"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/care5Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_care5"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/care6Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_care6"
                android:textColor="@color/black"
                android:textSize="15sp"/>


            <TextView
                android:id="@+id/symptomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="40sp"
                android:text="@string/txt_symptom"
                android:background="@drawable/white_rectangle_background"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/symptom1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_symptom1"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/symptom2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_symptom2"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/symptom3Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_symptom3"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/symptom4Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_symptom4"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/symptom5Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_symptom5"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/symptom6Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_symptom6"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/symptom7Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_margin="5sp"
                android:text="@string/txt_symptom7"
                android:textColor="@color/black"
                android:textSize="16sp"/>
    </LinearLayout>
</RelativeLayout>