<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background1"
    tools:context=".information">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_information"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/oilText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:text="@string/txt_Oil"
            android:background="@drawable/white_rectangle_background"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/oil1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5sp"
            android:layout_margin="20sp"
            android:text="@string/txt_Oil1"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/oil2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5sp"
            android:layout_margin="20sp"
            android:text="@string/txt_Oil2"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/securityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:text="@string/txt_security"
            android:background="@drawable/white_rectangle_background"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/security1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5sp"
            android:layout_margin="20sp"
            android:text="@string/txt_security1"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/security2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5sp"
            android:layout_margin="20sp"
            android:text="@string/txt_security2"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/security3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5sp"
            android:layout_margin="20sp"
            android:text="@string/txt_security3"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>