<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background1"
    tools:context=".news">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_news"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/news1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            android:text="@string/txt_news1"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/news2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:text="@string/txt_news2"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/news3Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:text="@string/txt_news3"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/news4Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:text="@string/txt_news4"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/news5Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:text="@string/txt_news5"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>