<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background1"
    tools:context=".normativity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="506dp"
        android:layout_marginStart="40sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="40sp"
        android:layout_marginRight="40sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_normativity"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="30sp"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/dowload_rule_100"
                android:layout_width="80sp"
                android:layout_height="30sp"
                android:contentDescription="@string/txt_normativity"
                android:src="@drawable/ic_download" />

            <TextView
                android:id="@+id/rule100Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/txt_rule100"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="30sp"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/dowload_rule_1072"
                android:layout_width="80sp"
                android:layout_height="30sp"
                android:contentDescription="@string/txt_normativity"
                android:src="@drawable/ic_download" />

            <TextView
                android:id="@+id/rule1072Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/txt_rule1072"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="30sp"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/dowload_rule_614"
                android:layout_width="80sp"
                android:layout_height="30sp"
                android:contentDescription="@string/txt_normativity"
                android:src="@drawable/ic_download" />

            <TextView
                android:id="@+id/rule614Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/txt_rule614"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="30sp"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/dowload_rule_1281"
                android:layout_width="80sp"
                android:layout_height="30sp"
                android:contentDescription="@string/txt_normativity"
                android:src="@drawable/ic_download" />

            <TextView
                android:id="@+id/rule1281Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/txt_rule1281"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="30sp"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/dowload_rule_1295"
                android:layout_width="80sp"
                android:layout_height="30sp"
                android:contentDescription="@string/txt_normativity"
                android:src="@drawable/ic_download" />

            <TextView
                android:id="@+id/rule1295Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/txt_rule1295"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="30sp"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/dowload_rule_2400"
                android:layout_width="80sp"
                android:layout_height="30sp"
                android:contentDescription="@string/txt_normativity"
                android:src="@drawable/ic_download" />

            <TextView
                android:id="@+id/rule2400Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/txt_rule2400"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="30sp"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/dowload_rule_1016"
                android:layout_width="80sp"
                android:layout_height="30sp"
                android:contentDescription="@string/txt_normativity"
                android:src="@drawable/ic_download" />

            <TextView
                android:id="@+id/rule1016Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/txt_rule1016"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>