<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background1"
    tools:context=".consider">

    <TextView
        android:id="@+id/textViewT"
        android:layout_width="334dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_consider"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="10sp"
        android:columnCount="1"
        android:rowCount="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5sp"
            android:layout_marginTop="60sp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/covid"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="5sp"
                android:contentDescription="@string/txt_covid"
                android:background="@drawable/white_rectangle_background"
                android:src="@drawable/ic_covid" />

            <TextView
                android:id="@+id/covidText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:text="@string/txt_covid"
                android:background="@drawable/white_rectangle_background"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5sp"
            android:layout_marginTop="60sp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/information"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="5sp"
                android:contentDescription="@string/txt_information"
                android:background="@drawable/white_rectangle_background"
                android:src="@drawable/ic_information" />

            <TextView
                android:id="@+id/informationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:text="@string/txt_information"
                android:background="@drawable/white_rectangle_background"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5sp"
            android:layout_marginTop="60sp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/news"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="5sp"
                android:contentDescription="@string/txt_news"
                android:background="@drawable/white_rectangle_background"
                android:src="@drawable/ic_news" />

            <TextView
                android:id="@+id/newstxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:text="@string/txt_news"
                android:background="@drawable/white_rectangle_background"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </GridLayout>

</RelativeLayout>